tests/errors/invalid-beam-join.typ
#import "../../src/lib.typ": score
#score(time: "4/4", beams: true, bars: ((notes: "C4:q - D:q E:q F:q"),))
